[package]
name = "tm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = "1.5.0"
futures-util = { version = "0.3.30", features = ["sink"] }
hmac = "0.12.1"
sha2 = "0.10.8"
tm-web-api = { path = "../tm-web-api" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
